# lazy-js

./: .#firstPage.js  README.MD  default.nix  evalOp-notes.js  evalRef-notes.txt  firstPage.html  firstPage.js  lazy-js.cabal  lazy-js.cabal~  shell.nix  shell.nix~
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
experimentation/: idk.js  scripts.html  secondPage.html  test_.js
src/JS/: #JS.hs#  #JSFFIParse.hs#  #MonadJS.hs#  #Run.hs#  .#MonadJS.hs  FFI.hs  JS.hs  JS.hs~  JSDOM.hs  JSFFI.hs  JSFFIParse.hs  MonadJS.hs  MonadJS.hs~  Run.hs  Run.hs~  ScrapeNA.hs  ScrapeNA.hs~  Source.hs  Source.hs~  Types.hs  Types.hs~
src/JS/JSFFIParse/: Combinators.hs  Expr.hs  Operation.hs  Value.hs
